[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/GameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/menu_placeholder_background.png" type="Texture" id=4]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1067.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true

[node name="ThemedMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -88.0
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 176, 176 )
rect_pivot_offset = Vector2( 88, 88 )
theme = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="ThemedMarginContainer"]
margin_right = 178.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ThemedMarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 174.0
margin_bottom = 172.0

[node name="VBoxContainer" type="VBoxContainer" parent="ThemedMarginContainer/PanelContainer/MarginContainer"]
margin_top = 10.0
margin_right = 170.0
margin_bottom = 158.0
rect_min_size = Vector2( 170, 148 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NewGame" parent="ThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 8.0
margin_right = 161.0
margin_bottom = 34.0
text = "New Game"

[node name="LoadGame" parent="ThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 38.0
margin_right = 161.0
margin_bottom = 72.0
text = "Load Game"

[node name="Options" parent="ThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 76.0
margin_right = 161.0
margin_bottom = 110.0
text = "Options"

[node name="Quit" parent="ThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 114.0
margin_right = 161.0
margin_bottom = 148.0
text = "Quit"
